[shitou] - set the default welcome page

--- a/src/main/webapp/WEB-INF/index.html
+++ b/src/main/webapp/WEB-INF/index.html
@@ -5,6 +5,6 @@
     <title>YOU ARE NOT BELONG HERE</title>
 </head>
 <body>
-<h1>Leave here, this is not the right place</h1>
+<h1 style="font:'Helvetica Neue, Helvetica, Arial, sans-serif'">Leave here, this is not the right place</h1>
 </body>
 </html>
